Name:               haskeme
Version:            0.1
Synopsis:           Lisp interpreter
Description:        A dialect of Lisp written in Haskell.
License:            OtherLicense
License-File:       LICENSE
Author:             Chris Taylor
Maintainer:         Chris Taylor
Stability:          Experimental
Homepage:           https://github.com/chris-taylor/Haskeme
Cabal-Version:      >= 1.8
Build-Type:         Simple
Category:           Language

Extra-Source-Files: README.md
                    LICENSE

Data-Files:         lib/stdlib.scm

Source-Repository head
    Type:           git
    Location:       git://github.com/chris-taylor/haskeme.git

Library
    Build-Depends:      base >= 2, parsec, mtl, haskell98, containers, array, random
    Extensions:         ExistentialQuantification
    Hs-Source-Dirs:     src
    Exposed-Modules:    Language.Types
                        Language.Variables
                        Language.Core
                        Language.Numeric
                        Language.Parser
                        Language.IOPrimitives
                        Language.Primitives

Executable          haski
    Build-Depends:  haskeme, base, parsec, mtl, haskell98, containers, array, random
    Extensions:     ExistentialQuantification
    Main-is:        Main.hs
    Hs-Source-Dirs: src/Interpreter